--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   share: ^2.0.4 # Check for the latest version on pub.dev
   # other dependencies...
   intl: ^0.17.0 # Check for the latest version on pub.dev
+  shared_preferences: ^2.0.6 # Check for the latest version
 
 dev_dependencies:
   flutter_test:
